--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
-        "spatie/laravel-medialibrary": "^7.5"
+        "spatie/laravel-medialibrary": "^7.5",
+        "symfony/dom-crawler": "^4.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
